# LINALG

./: .gitignore  CMakeLists.txt  README.md  main.cxx
include/: linalg.hxx
include/linalg/: linalg.hxx  matrix.hxx
src/: linalg.cxx  matrix_instantiations.cxx
src/matrix/: matrix_constructors.hxx  matrix_operations.hxx  matrix_operators.hxx
src/sparsemtxes/: ccs.hxx  coo.hxx  crs.hxx
